@@ -1,3 +1,14 @@
+## Client[1.11] - 2016-4-2
+### Added
+ - Autocomplete will complete shared file names
+ - Left click shared file downloading in chat text box through hyperlink object
+ - Left click download folder opening from chat text box after a download finishes
+
+## Server[1.04b] - 2016-4-2
+### Fix
+ - File_server handler object was crashing after a day, replaced with while loop function
+
+
 ## Client[1.10] - 2016-3-29
 ### Added
  - Text editor
